--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	  background-image: url(img/tall_winter_birch.svg), none;
 	  height: 11000px;
 	  -ms-interpolation-mode: bicubic;
-image-rendering: -moz-crisp-edges;
-
+	  image-rendering: -moz-crisp-edges;
+	  width: 1000px;
 	}
 
 	html{
@@ -39,7 +39,68 @@ image-rendering: -moz-crisp-edges;
 		background: linear-gradient(to right, rgba(157,221,208,1) 0%, rgba(113,193,178,1) 50%, rgba(157,221,208,1) 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9dddd0', endColorstr='#9dddd0', GradientType=1 );
 
+	
 		
+	}
+
+	.venue {
+		position: absolute;
+		top: 1550px;
+		left: 26%;
+	}
+
+	.venue img{
+		height: 80px;
+		width: 80px;
+	}
+
+	.venue img:hover { 
+    	background-color: yellow;
+	}
+
+	.sleeping {
+		position: absolute;
+		top: 1820px;
+		right: 31%;
+	}
+
+	.sleeping img{
+		height: 80px;
+		width: 80px;
+	}
+
+	.sleeping img:hover { 
+    	background-color: yellow;
+	}
+
+	.registry {
+		position: absolute;
+		top: 2100px;
+		left: 26%;
+	}
+
+	.registry img{
+		height: 80px;
+		width: 80px;
+	}
+
+	.registry img:hover { 
+    	background-color: yellow;
+	}
+
+	.instagram {
+		position: absolute;
+		top: 2410px;
+		right: 31%;
+	}
+
+	.instagram img{
+		height: 80px;
+		width: 80px;
+	}
+
+	.instagram img:hover { 
+    	background-color: yellow;
 	}
 
 </style>
@@ -113,6 +174,31 @@ image-rendering: -moz-crisp-edges;
 
 </div>
   
+
+<div class="venue">
+	<a href="http://www.pennspeak.com/" target="_blank">
+		<img src="img/rings4.png">
+	</a>
+</div>
+
+
+<div class="sleeping">
+	<a href="https://www.google.com/maps/search/hotels/@40.8424675,-75.6706981,13z" target="_blank">
+		<img src="img/sleeping.png">
+	</a>
+</div>
+
+<div class="registry">
+	<a href="http://www.myregistry.com/" target="_blank">
+		<img src="img/clipboard105.png">
+	</a>
+</div>
+<div class="instagram">
+	<a href="https://instagram.com/mikeandmoll/" target="_blank">
+		<img src="img/instagram12.png">
+	</a>
+</div>
+
 
 </body>
 
