--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
 	}
 
 	body {
-	  background: url(img/tall_winter_birch.svg);
-	  background-image: url(img/tall_winter_birch.svg), none;
+	  background: url(img/tall_winter_birch.png);
+	  background-image: url(img/tall_winter_birch.png), none;
+	  background-repeat: no-repeat;
+	  background-position: center;
 	  height: 11000px;
 	  -ms-interpolation-mode: bicubic;
 	  image-rendering: -moz-crisp-edges;
-	  width: 1000px;
+
+	  margin-top: -250px;
+	
 	}
 
 	html{
@@ -45,7 +49,7 @@
 
 	.venue {
 		position: absolute;
-		top: 1550px;
+		top: 1400px;
 		left: 26%;
 	}
 
@@ -60,7 +64,7 @@
 
 	.sleeping {
 		position: absolute;
-		top: 1820px;
+		top: 1640px;
 		right: 31%;
 	}
 
@@ -75,7 +79,7 @@
 
 	.registry {
 		position: absolute;
-		top: 2100px;
+		top: 1900px;
 		left: 26%;
 	}
 
@@ -90,7 +94,7 @@
 
 	.instagram {
 		position: absolute;
-		top: 2410px;
+		top: 2180px;
 		right: 31%;
 	}
 
@@ -108,7 +112,7 @@
 <body>
 <div ng-app="myApp" ng-controller="Example">
 
-	<div class="container" style='height: 2500px;'>
+	<div class="container" style='height: 2600px;'>
 		
 	</div>
 
