--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
 	  background: url(img/tall_winter_birch.png);
 	  background-image: url(img/tall_winter_birch.png), none;
 	  background-repeat: no-repeat;
-	  background-position: center;
-	  height: 11000px;
+	  background-position: center top;
+	  height: 10000px;
 	  -ms-interpolation-mode: bicubic;
 	  image-rendering: -moz-crisp-edges;
 
-	  margin-top: -250px;
+	  margin-top: 0px;
 	
 	}
 
 	html{
+		/*
 		background: rgba(157,221,208,1);
 		background: -moz-linear-gradient(left, rgba(157,221,208,1) 0%, rgba(113,193,178,1) 50%, rgba(157,221,208,1) 100%);
 		background: -webkit-gradient(left top, right top, color-stop(0%, rgba(157,221,208,1)), color-stop(50%, rgba(113,193,178,1)), color-stop(100%, rgba(157,221,208,1)));
@@ -42,6 +43,8 @@
 		background: -ms-linear-gradient(left, rgba(157,221,208,1) 0%, rgba(113,193,178,1) 50%, rgba(157,221,208,1) 100%);
 		background: linear-gradient(to right, rgba(157,221,208,1) 0%, rgba(113,193,178,1) 50%, rgba(157,221,208,1) 100%);
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9dddd0', endColorstr='#9dddd0', GradientType=1 );
+		*/
+		background: #d99260;
 
 	
 		
